--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body {
-  padding: 30px;
   font-family: sans-serif;
+  text-align: justify;
 }
 
 h4 {
@@ -21,8 +21,9 @@ h4 {
   flex-wrap: wrap;
 }
 
-.episode {
-  text-align: justify;
+#icon {
+  color: blue;
+  font-size: 24px;
 }
 
 .episodeName,
@@ -42,7 +43,7 @@ h4 {
 }
 
 .red {
-  color: red;
+  color: blue;
 }
 
 .field {
@@ -50,11 +51,71 @@ h4 {
   margin-bottom: 20px;
 }
 a {
-  color: red;
+  color: blue;
 }
 
 #title {
   margin-top: 7%;
+}
+
+.sidebar {
+  cursor: pointer;
+  color: black;
+  height: 100%;
+  position: fixed;
+  z-index: 2;
+  top: 0;
+  left: 0;
+  overflow-x: hidden;
+  transition: 0.5s;
+  width: 30px;
+  border-right: 3px solid black;
+  background: white;
+  padding: 10px;
+}
+
+.sidebar2 {
+  cursor: pointer;
+  color: black;
+  height: 100%;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  overflow-x: hidden;
+  transition: 0.5s;
+  padding: 10px;
+  width: 70px;
+  border-right: 3px solid black;
+  background-color: blue;
+}
+
+#sidebar1Text {
+  display: none;
+  padding: 0;
+  margin: 0;
+}
+
+#sidebar2Text {
+  display: none;
+  padding: 0;
+  margin: 0;
+}
+
+#main {
+  transition: margin-left 0.5s;
+  padding: 10px;
+  padding-left: 100px;
+}
+
+#links {
+  display: none
+}
+/* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
+@media screen and (max-height: 450px) {
+  .sidebar {
+    padding-top: 15px;
+  }
 }
 
 @media only screen and (min-width: 768px) {
