--- a/styles.css
+++ b/styles.css
@@ -26,6 +26,7 @@ h4 {
   flex-wrap: wrap;
 }
 
+#icon3,
 #icon1,
 #icon2 {
   font-size: 24px;
@@ -36,7 +37,10 @@ h4 {
 #icon2 {
   margin-left: 50px;
 }
-
+#icon3 {
+  margin-left: 100px;
+  color: white;
+}
 .episodeName,
 .authorsName {
   font-size: 24px;
@@ -77,7 +81,6 @@ a {
   color: black;
   height: 100%;
   position: fixed;
-  z-index: 2;
   top: 0;
   left: 0;
   overflow-x: hidden;
@@ -88,22 +91,23 @@ a {
   padding: 10px;
 }
 
+.sidebar1 {
+  z-index: 3;
+}
+
 .sidebar2 {
-  cursor: pointer;
-  color: black;
-  height: 100%;
-  position: fixed;
-  z-index: 1;
-  top: 0;
-  left: 0;
-  overflow-x: hidden;
-  transition: 0.5s;
-  padding: 10px;
-  width: 70px;
-  border-right: 3px solid black;
+  z-index: 2;
+  width: 80px;
   background-color: blue;
 }
 
+.sidebar3 {
+  color: white;
+  width: 130px;
+  background-color: black;
+}
+
+#sidebar3Text,
 #sidebar1Text,
 #sidebar2Text {
   display: none;
@@ -112,12 +116,13 @@ a {
   font-size: 24px;
 }
 #sidebar2Text {
-  padding-left: 50px;
+  padding-left: 65px;
 }
+
 #main {
   transition: margin-left 0.5s;
   padding: 10px;
-  padding-left: 100px;
+  padding-left: 165px;
 }
 
 #links {
@@ -132,7 +137,7 @@ a {
 
 @media only screen and (min-width: 768px) {
   .episode {
-    max-width: 50%;
+    max-width: 70%;
   }
   .word {
     font-size: 2rem;
