--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,8 @@ h4 {
 #wordsWrapper {
   display: flex;
   flex-wrap: wrap;
+  border-bottom: 3px solid black;
+  padding-left: 165px;
 }
 
 #icon3,
@@ -47,7 +49,9 @@ h4 {
   text-transform: capitalize;
 }
 #episode {
-  font-size: 24px;
+  font-size: 30px;
+  font-family: 'Times New Roman';
+  margin-left: 165px;
 }
 .authorsName {
   font-weight: 500;
@@ -74,6 +78,9 @@ a {
 
 #title {
   margin-top: 40px;
+  font-size: 32px;
+  padding-bottom: 10px;
+  margin-left: 165px;
 }
 
 .sidebar {
@@ -113,20 +120,29 @@ a {
   display: none;
   padding: 0 15px 15px;
   margin: 0;
-  font-size: 24px;
+  font-size: 22px;
 }
 #sidebar2Text {
   padding-left: 65px;
 }
 
+#sidebar3Text {
+  color: white;
+  padding-left: 110px;
+}
+
 #main {
   transition: margin-left 0.5s;
-  padding: 10px;
-  padding-left: 165px;
 }
 
 #links {
   display: none;
+  flex-direction: column;
+  padding-left: 15px;
+  padding-top: 0;
+}
+#sideBarTitle {
+  font-size: 24px;
 }
 /* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
 @media screen and (max-height: 450px) {
