--- a/client/styles.css
+++ b/client/styles.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: kenoky;
-  src: url('./fonts/kenoky-coffekan-font/KenokyLight.ttf');
+  src: url('./fonts/KenokyLight.ttf');
 }
 
 body {
