--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,14 @@
-body {
-  font-family: sans-serif;
-  text-align: justify;
+@font-face {
+  font-family: kenoky;
+  src: url('./fonts/KenokyLight.ttf');
 }
+
+body {
+  font-family: kenoky;
+  text-align: justify;
+  background-color: #fffff1;
+}
+
 input:focus {
   outline: none;
 }
@@ -19,6 +26,7 @@ h4 {
   border-bottom: 2px solid blue;
   cursor: pointer;
   color: blue;
+  font-family: kenoky;
 }
 
 .input {
@@ -34,7 +42,6 @@ h4 {
 #wordsWrapper {
   display: flex;
   flex-wrap: wrap;
-  border-bottom: 3px solid black;
   padding-left: 165px;
 }
 
@@ -51,7 +58,7 @@ h4 {
 }
 #icon3 {
   margin-left: 100px;
-  color: white;
+  color: #fffff1;
 }
 .episodeName,
 .authorsName {
@@ -59,8 +66,7 @@ h4 {
   text-transform: capitalize;
 }
 #episode {
-  font-size: 30px;
-  font-family: 'Times New Roman';
+  font-size: 24px;
   margin-left: 165px;
 }
 .authorsName {
@@ -69,13 +75,17 @@ h4 {
 
 .word {
   padding: 10px;
-  padding-left: 0;
   cursor: pointer;
-  font-size: 2rem;
+  font-size: 3rem;
+  font-family: sans-serif;
+  border: 1px solid black;
+  border-radius: 50px;
+  margin: 5px;
 }
 
 .red {
-  color: blue;
+  background-color: blue;
+  color: #fffff1;
 }
 
 .field {
@@ -106,7 +116,7 @@ a {
   transition: 0.5s;
   width: 30px;
   border-right: 3px solid black;
-  background: white;
+  background: #fffff1;
   padding: 10px;
 }
 
@@ -121,7 +131,7 @@ a {
 }
 
 .sidebar3 {
-  color: white;
+  color: #fffff1;
   width: 130px;
   background-color: black;
 }
@@ -139,7 +149,7 @@ a {
 }
 
 #sidebar3Text {
-  color: white;
+  color: #fffff1;
   padding-left: 110px;
 }
 
