--- a/styles.css
+++ b/styles.css
@@ -36,7 +36,8 @@ h4 {
 }
 
 .button {
-  font-size: 32px;
+  font-family: happy-times;
+  font-size: 22px;
   font-weight: normal;
   background: transparent;
   border: 0;
@@ -60,6 +61,7 @@ h4 {
   display: flex;
   flex-wrap: wrap;
   padding-left: 165px;
+  padding-top: 20px;
 }
 
 #icon3,
@@ -118,7 +120,7 @@ a {
 #info,
 #title {
   margin-top: 40px;
-  font-size: 32px;
+  font-size: 22px;
   padding-bottom: 10px;
   margin-left: 175px;
 }
@@ -178,9 +180,11 @@ a {
 
 #links {
   display: none;
-  flex-direction: column;
   padding-left: 15px;
   padding-top: 0;
+}
+.link {
+  margin: 10px;
 }
 #sideBarTitle {
   font-size: 28px;
@@ -194,7 +198,7 @@ a {
 
 @media only screen and (min-width: 768px) {
   .episode {
-    max-width: 70%;
+   width: 70%;
   }
   .word {
     font-size: 2rem;
