--- a/client/styles.css
+++ b/client/styles.css
@@ -32,7 +32,8 @@ button {
 
 h4,
 h1,
-h2 {
+h2,
+p {
   margin: 0;
   font-weight: normal;
 }
@@ -62,6 +63,7 @@ ul {
   font-size: 24px;
 }
 
+.selected,
 .menu--list__item-label:hover {
   text-decoration: underline;
 }
@@ -122,7 +124,7 @@ a {
 
 .main {
   display: flex;
-  padding-top: 130px;
+  padding-top: 50px;
   text-align: justify;
   max-height: 100vh;
 }
@@ -145,5 +147,5 @@ a {
 }
 
 .about {
-  padding-top: 130px;
+  padding-top: 100px;
 }
