--- a/client/styles.css
+++ b/client/styles.css
@@ -14,6 +14,7 @@ body {
   font-size: 24px;
   cursor: default;
   max-height: 100vh;
+  margin: 0;
 }
 ::-moz-selection {
   /* Code for Firefox */
@@ -25,9 +26,19 @@ body {
   color: white;
   background: blue;
 }
+
 button {
   border: 0;
   background: transparent;
+}
+
+.saveButton {
+  font-size: 22px;
+  color: blue;
+  padding: 0;
+  padding-top: 10px;
+  text-decoration: underline;
+  cursor: pointer;
 }
 
 h4,
@@ -52,6 +63,7 @@ a {
   display: flex;
   position: fixed;
   top: 10px;
+  z-index: 1;
 }
 
 .menu--list {
@@ -74,10 +86,23 @@ a {
   text-decoration: underline;
 }
 
-.about {
-  padding-top: 120px;
+.header {
+  padding: 20px 10px;
 }
 
+.about {
+  padding-top: 120px;
+  position: fixed;
+  background-color: #fffff1;
+  width: 100vw;
+  left: 0;
+  top: 0;
+}
+
+.about__text {
+  margin: 10px;
+  margin-bottom: 20px;
+}
 .button {
   font-family: happy-times;
   font-size: 22px;
@@ -97,7 +122,7 @@ a {
 
 .main {
   display: flex;
-  padding-top: 120px;
+  padding-top: 100px;
   text-align: justify;
   max-height: 100vh;
 }
