--- a/client/styles.css
+++ b/client/styles.css
@@ -130,6 +130,7 @@ a {
   margin: 10px;
   margin-bottom: 20px;
 }
+
 .button {
   font-family: happy-times;
   font-size: 22px;
@@ -143,7 +144,12 @@ a {
   padding: 0;
 }
 
-.link {
+.links {
+  margin-right: 10px;
+  padding-bottom: 20px;
+}
+
+.links__item {
   margin-right: 10px;
 }
 
