--- a/client/styles.css
+++ b/client/styles.css
@@ -8,7 +8,8 @@ body {
   background-color: #fffff1;
   font-size: 24px;
   cursor: default;
-  max-height: 100vh;
+  height: 100vh;
+  overflow: hidden;
   margin: 0;
   color: #1e202a;
 }
@@ -19,12 +20,12 @@ body {
 }
 
 ::selection {
-  color:  #fffff1;
+  color: #fffff1;
   background: #1e202a;
 }
 
 ::-webkit-scrollbar {
-  width: 5px; 
+  width: 5px;
   height: 7px;
 }
 
@@ -35,7 +36,7 @@ body {
 }
 
 ::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 4px rgba(0,0,0,0.2);
+  box-shadow: inset 0 0 4px rgba(0, 0, 0, 0.2);
 }
 
 @-moz-document url-prefix() {
@@ -185,7 +186,13 @@ a {
 
 .rightSide {
   width: 50%;
-  margin: 0 20px 0 30px;
+  margin-left:30px;
+}
+
+.episodesList {
+  height: calc(100vh - 20%);
+  overflow: auto;
+  padding-right: 20px;
 }
 
 #episode {
