--- a/client/styles.css
+++ b/client/styles.css
@@ -186,7 +186,7 @@ a {
 
 .rightSide {
   width: 50%;
-  margin-left:30px;
+  margin-left: 30px;
 }
 
 .episodesList {
@@ -210,4 +210,43 @@ a {
   background-color: #1e202a;
   border-radius: 50%;
   display: inline-block;
+}
+
+@media screen and (max-width: 1024px) {
+  body {
+    overflow-y: auto;
+  }
+  .menu--list {
+    display: none;
+  }
+
+  .main {
+    flex-direction: column;
+    padding-top: 80px;
+  }
+  .about {
+    padding-top: 0;
+  }
+  #wordsWrapper {
+    max-width: 100%;
+    max-height: 100%;
+  }
+
+  .rightSide {
+    width: 100%;
+    margin-left: 0;
+    margin: 10px;
+  }
+
+  #episodeWrapper {
+    padding: 10px;
+  }
+  .episodesList {
+    height: 100%;
+  }
+
+  #episode {
+    padding-right: 20px;
+    margin-top: 10px;
+  }
 }
