--- a/client/styles.css
+++ b/client/styles.css
@@ -183,6 +183,9 @@ a {
   margin-top: 10px;
 }
 
+#aboutWrapper {
+  padding-right: 20px;
+}
 .hidden {
   display: none;
 }
@@ -198,21 +201,37 @@ a {
 @media screen and (max-width: 1024px) {
   body {
     overflow-y: auto;
+    height: 100%;
+    overflow-x: hidden;
+  }
+  .menu,
+  .menu--list {
+    flex-direction: column;
   }
   .menu--list {
-    display: none;
+    margin-top: 20px;
   }
-
+  .header {
+    height: auto;
+    padding-bottom: 0;
+  }
+  .menu--list__item {
+    margin: 0;
+    height: 100%;
+    margin-bottom: 10px;
+  }
   .main {
     flex-direction: column;
-    padding-top: 80px;
+    height: 100%;
   }
+
   .about {
     padding-top: 0;
   }
+
   #wordsWrapper {
     max-width: 100%;
-    max-height: 100%;
+    height: 100%;
   }
 
   .rightSide {
@@ -224,6 +243,7 @@ a {
   #episodeWrapper {
     padding: 10px;
   }
+
   .episodesList {
     height: 100%;
   }
