--- a/client/styles.css
+++ b/client/styles.css
@@ -204,24 +204,28 @@ a {
     height: 100%;
     overflow-x: hidden;
   }
+
   .menu,
   .menu--list {
     flex-direction: column;
   }
+
   .menu--list {
     margin-top: 20px;
   }
+
   .header {
     height: auto;
     padding-bottom: 0;
   }
+
   .menu--list__item {
     margin: 0;
     height: 100%;
     margin-bottom: 10px;
   }
   .main {
-    flex-direction: column;
+    flex-direction: column-reverse;
     height: 100%;
   }
 
@@ -251,5 +255,12 @@ a {
   #episode {
     padding-right: 20px;
     margin-top: 10px;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 1024px) {
+  .menu,
+  .menu--list {
+    flex-direction: row;
   }
 }
