--- a/client/styles.css
+++ b/client/styles.css
@@ -12,7 +12,7 @@ body {
   font-family: FavoritStd-Regular;
   background-color: #fffff1;
   cursor: default;
-  height: 100vh;
+  height: 100%;
   margin: 0;
 }
 
@@ -138,7 +138,7 @@ a {
 .main {
   display: flex;
   text-align: justify;
-  height: calc(100vh - 150px);
+  height: 100%;
   margin-top: 20px;
 }
 
@@ -147,7 +147,7 @@ a {
   flex-wrap: wrap;
   max-width: 55%;
   padding-bottom: 10px;
-  height: calc(100vh - 150px);
+  height: 100%;
   align-content: flex-start;
 }
 
