--- a/client/styles.css
+++ b/client/styles.css
@@ -6,10 +6,10 @@
 * {
   font-size: 24px;
   color: #1e202a;
+  font-family: FavoritStd-Regular;
 }
 
 body {
-  font-family: FavoritStd-Regular;
   background-color: #fffff1;
   cursor: default;
   height: 100%;
@@ -228,6 +228,7 @@ a {
   .main {
     flex-direction: column-reverse;
     height: 100%;
+    margin: 10px;
   }
 
   .about {
@@ -241,7 +242,6 @@ a {
 
   .rightSide {
     width: 100%;
-    margin-left: 0;
     margin: 10px;
   }
 
