--- a/client/styles.css
+++ b/client/styles.css
@@ -6,13 +6,13 @@
 * {
   font-size: 24px;
   color: #1e202a;
+  font-family: FavoritStd-Regular;
 }
 
 body {
-  font-family: FavoritStd-Regular;
   background-color: #fffff1;
   cursor: default;
-  height: 100vh;
+  height: 100%;
   margin: 0;
 }
 
@@ -138,7 +138,7 @@ a {
 .main {
   display: flex;
   text-align: justify;
-  height: calc(100vh - 150px);
+  height: 100%;
   margin-top: 20px;
 }
 
@@ -147,7 +147,7 @@ a {
   flex-wrap: wrap;
   max-width: 55%;
   padding-bottom: 10px;
-  height: calc(100vh - 150px);
+  height: 100%;
   align-content: flex-start;
 }
 
@@ -170,7 +170,6 @@ a {
 .rightSide {
   width: 50%;
   margin-left: 30px;
-  margin-right: 10px;
 }
 
 .episodesList {
@@ -184,6 +183,10 @@ a {
   margin-top: 10px;
 }
 
+#aboutWrapper {
+  padding-right: 20px;
+}
+
 .hidden {
   display: none;
 }
@@ -194,4 +197,70 @@ a {
   background-color: #1e202a;
   border-radius: 50%;
   display: inline-block;
+}
+
+@media screen and (max-width: 1024px) {
+  body {
+    overflow-y: auto;
+    height: 100%;
+    overflow-x: hidden;
+  }
+
+  .menu,
+  .menu--list {
+    flex-direction: column;
+  }
+
+  .menu--list {
+    margin-top: 20px;
+  }
+
+  .header {
+    height: auto;
+    padding-bottom: 0;
+  }
+
+  .menu--list__item {
+    margin: 0;
+    height: 100%;
+    margin-bottom: 10px;
+  }
+  .main {
+    flex-direction: column-reverse;
+    height: 100%;
+    margin: 10px;
+  }
+
+  .about {
+    padding-top: 0;
+  }
+
+  #wordsWrapper {
+    max-width: 100%;
+    height: 100%;
+  }
+
+  .rightSide {
+    width: 100%;
+    margin: 10px;
+  }
+
+  #episodeWrapper {
+    padding: 10px;
+  }
+
+  .episodesList {
+    height: 100%;
+  }
+
+  #episode {
+    padding-right: 20px;
+    margin-top: 10px;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 1024px) {
+  .menu--list {
+    flex-direction: row;
+  }
 }
