--- a/client/styles.css
+++ b/client/styles.css
@@ -14,6 +14,12 @@ body {
   cursor: default;
   height: 100%;
   margin: 0;
+  padding: 0 20px;
+}
+
+button {
+  border: 0;
+  background: transparent;
 }
 
 ::-moz-selection {
@@ -46,24 +52,6 @@ body {
     scrollbar-width: thin;
     scrollbar-color: #1e202a;
   }
-}
-
-button {
-  border: 0;
-  background: transparent;
-}
-
-.saveButton {
-  font-size: 24px;
-  padding: 0;
-  padding-top: 10px;
-  cursor: pointer;
-  max-width: 125px;
-  text-align: left;
-}
-
-.saveButton:hover {
-  text-decoration: underline;
 }
 
 h4,
@@ -113,7 +101,7 @@ a {
 }
 
 .header {
-  padding: 20px 10px;
+  padding: 20px 0;
   height: 80px;
 }
 
@@ -168,19 +156,18 @@ a {
 }
 
 .rightSide {
-  width: 50%;
-  margin-left: 30px;
+  max-width: 50%;
+  padding-left: 20px;
 }
 
 .episodesList {
   overflow: auto;
-  padding-right: 20px;
+  padding-right: 10px;
 }
 
 #episode {
   font-size: 24px;
   margin-top: 10px;
-  padding-right: 20px;
 }
 
 #aboutWrapper {
@@ -197,6 +184,20 @@ a {
   background-color: #1e202a;
   border-radius: 50%;
   display: inline-block;
+}
+
+
+.saveButton {
+  font-size: 24px;
+  padding: 0;
+  padding-top: 10px;
+  cursor: pointer;
+  max-width: 125px;
+  text-align: left;
+}
+
+.saveButton:hover {
+  text-decoration: underline;
 }
 
 @media screen and (max-width: 1024px) {
@@ -226,13 +227,13 @@ a {
     padding-right: 10px;
     margin-bottom: 10px;
   }
+
   .main {
     flex-direction: column-reverse;
-    height: 100%;
   }
 
-  .about {
-    padding-top: 0;
+  #aboutWrapper {
+    padding-right: 0;
   }
 
   #wordsWrapper {
@@ -241,21 +242,12 @@ a {
   }
 
   .rightSide {
-    width: 100%;
-    margin: 10px;
-  }
-
-  #episodeWrapper {
+    max-width: 100vw;
     padding: 10px;
   }
 
   .episodesList {
-    height: 100%;
-  }
-
-  #episode {
-    padding-right: 20px;
-    margin-top: 10px;
+    padding-right: 0;
   }
 }
 
