--- a/client/styles.css
+++ b/client/styles.css
@@ -14,7 +14,6 @@ body {
   cursor: default;
   height: 100%;
   margin: 0;
-  padding: 0 20px;
   overflow-x: hidden;
 }
 
@@ -74,23 +73,39 @@ a {
   color: blue;
 }
 
+.container {
+  padding: 0 20px;
+}
+
 .popup-overlay {
-  position: absolute;
-  height: 100%;
+  position: fixed;
+  min-height: 100%;
   width: 100%;
   text-align: center;
   display: flex;
   align-items: center;
   justify-content: center;
+  backdrop-filter: blur(5px);
 }
 
-.popup-content {
+.popup {
   position: absolute;
   background-color: #fffff1;
   height: 400px;
   width: 800px;
   border: 1px solid #1e202a;
   border-radius: 50px;
+  padding: 20px 30px;
+}
+
+.popup-header {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.popup-image {
+  width: 40%;
 }
 
 .menu {
@@ -226,7 +241,16 @@ a {
     height: 100%;
     overflow-x: hidden;
   }
-
+  .popup {
+    width: 75%;
+    height: auto;
+  }
+  .popup-header {
+    justify-content: flex-end;
+  }
+  .popup-header--title {
+    display: none;
+  }
   .menu,
   .menu--list {
     flex-direction: column;
