--- a/client/styles.css
+++ b/client/styles.css
@@ -118,12 +118,6 @@ a {
   align-items: flex-start;
 }
 
-.logo {
-  margin: 20px 10px;
-  max-width: 700px;
-}
-
-
 .menu {
   display: flex;
 }
@@ -247,6 +241,18 @@ a {
   text-decoration: underline;
 }
 
+.logo {
+  margin: 20px 10px;
+  max-width: 700px;
+}
+
+@media screen and (min-width: 1600px) {
+  .logo {
+    position: absolute;
+    bottom: 10px;
+  }
+}
+
 @media screen and (max-width: 1024px) {
   body {
     overflow-y: auto;
@@ -314,6 +320,9 @@ a {
     padding-right: 0;
   }
 
+  .logo {
+    max-width: 500px;
+  }
 }
 
 @media (min-width: 768px) and (max-width: 1024px) {
